Fix build, proper spacing sorting

--- a/packages/styles/sass/blocks/option-list.sass
+++ b/packages/styles/sass/blocks/option-list.sass
@@ -14,19 +14,19 @@
   &--item
     padding: 1rem 1rem 0.5rem 0.75rem
     display: flex
-    border: 1px solid $spot-c-box-border
-    background: $spot-c-box-background
+    border: 1px solid $spot-color-box-border
+    background: $spot-color-box-background
     border-radius: 4px
 
     &:not(:last-child)
       margin-bottom: 0.5rem
 
     &_selected
-      border: 1px solid $spot-c-box-selected-border
-      background: $spot-c-box-selected-background
+      border: 1px solid $spot-color-box-selected-border
+      background: $spot-color-box-selected-background
 
     &_disabled
-      color: $spot-c-foreground-disabled
+      color: $spot-color-foreground-disabled
 
     &-title,
     &-description
